syntax = "proto3";

option go_package = "./orderspb";

service OrdersService{
    rpc CreateOrders(CreateOrdersRequest) returns (OrdersResponse);
    rpc GetOrders(GetOrdersRequest) returns (OrdersResponse);
    rpc UpdateOrders(UpdateOrdersRequest) returns (UpdateOrdersResponse);
    rpc DeleteOrders(DeleteOrdersRequest) returns (DeleteOrdersResponse);
};

message CreateOrdersRequest{
    string user_id = 2;          
    repeated string products = 3; 
    string location = 4;         
    int32 status = 5;
};

message OrdersResponse{
    Orders orders = 1;
};

message GetOrdersRequest{
    string user_id = 1;
};

message listCreateOrdersRequest{
    repeated CreateOrdersRequest orders = 1;
}


message Orders {
    string id = 1;              
    string user_id = 2;          
    repeated string products = 3; 
    string location = 4;         
    int32 status = 5;
    string created_at = 6;
    string updated_at = 7;
};

message UpdateOrdersRequest{
    string id = 1;              
    string user_id = 2;          
    repeated string products = 3; 
    string location = 4;         
    int32 status = 5;
};

message UpdateOrdersResponse{
    string message = 1; 
};

message DeleteOrdersRequest{
    string id = 1;
};

message DeleteOrdersResponse{
    string message = 1; 
};